[package]
name = "shapesynth"
description = "A synth made of shapes"
version = "0.1.0"
authors = ["John <johnmorris@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
cpal = { version = "0.13.0", features = [ "jack" ] }
structopt = "0.3"
rand = "0.8"
midir = "0.7.0"
wmidi = "4.0.2"
simple_logger = "1.11"
log = "0.4.14"
gag = "0.1"
