[package]
name = "shapes"
description = "A synth made of shapes"
version = "0.2.0"
authors = ["John Botris <johnmorris@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cpal = { version = "0.13", features = [ "jack" ] }
structopt = "0.3"
rand = "0.8"
midir = "0.7"
wmidi = "4.0"
simple_logger = "1.11"
log = "0.4"
gag = "0.1"
